[gd_scene load_steps=10 format=3 uid="uid://bijjksnkngjdy"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_sk48s"]
[ext_resource type="PackedScene" uid="uid://ctxkuamspbjm2" path="res://Goblin.aseprite" id="2_b380w"]
[ext_resource type="Script" path="res://Scripts/EnemyCollision.gd" id="3_cx2wo"]
[ext_resource type="Script" path="res://Scripts/Area2D2.gd" id="4_q8erg"]
[ext_resource type="Texture2D" uid="uid://bbmuor06wxlf3" path="res://icon.svg" id="5_1je36"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cegx2"]
friction = 2.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8i5xy"]
radius = 6.05106
height = 39.5093

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4fx8"]
radius = 25.1531
height = 72.441

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycjcf"]
size = Vector2(8.67886, 8.68189)

[node name="Node2D" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_cegx2")
lock_rotation = true
script = ExtResource("1_sk48s")
health = 200
speed = 2000
baseX = 240
maxSpeed = 80

[node name="Icon" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(-20, -1)
scale = Vector2(0.328125, -0.0078125)
texture = ExtResource("5_1je36")

[node name="Icon2" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(-9, 0.999996)
rotation = 2.77092
scale = Vector2(0.328125, -0.0078125)
texture = ExtResource("5_1je36")

[node name="Goblin" parent="RigidBody2D" instance=ExtResource("2_b380w")]
position = Vector2(0, -10)
scale = Vector2(3, 3)
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
scale = Vector2(0.991561, 1.01242)
shape = SubResource("CapsuleShape2D_8i5xy")

[node name="Area2D" type="Area2D" parent="RigidBody2D" groups=["enemy"]]
scale = Vector2(0.993913, 1)
script = ExtResource("3_cx2wo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D" groups=["enemy"]]
shape = SubResource("CapsuleShape2D_v4fx8")

[node name="Ground" type="Area2D" parent="RigidBody2D"]
scale = Vector2(3.71933, 4.32362)
script = ExtResource("4_q8erg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Ground"]
position = Vector2(-0.268866, 5.08833)
scale = Vector2(1.54897, -0.33972)
shape = SubResource("RectangleShape2D_ycjcf")

[node name="Ground2" type="RayCast2D" parent="RigidBody2D"]
target_position = Vector2(0, 29)

[node name="Step" type="RayCast2D" parent="RigidBody2D"]
target_position = Vector2(-45, 0)

[node name="Step2" type="RayCast2D" parent="RigidBody2D"]
position = Vector2(0, 5)
target_position = Vector2(-30, 14)

[node name="TextEdit" type="TextEdit" parent="RigidBody2D"]
offset_left = -25.0
offset_top = -66.0
offset_right = 94.0
offset_bottom = -33.0
scale = Vector2(0.537601, 0.537601)

[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_body_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_area_exited"]
[connection signal="damage" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_damage"]
[connection signal="area_entered" from="RigidBody2D/Ground" to="RigidBody2D" method="_on_ground_area_entered"]
[connection signal="area_exited" from="RigidBody2D/Ground" to="RigidBody2D" method="_on_ground_area_exited"]
